committed for life

--- a/new_file.html
+++ b/new_file.html
@@ -9,7 +9,7 @@
 	<body>
 		<div>
 			<header>
-				<h1>This is our first file</h1>
+				<h1>This was edited in cloud 9</h1>
 			</header>
 			<nav>
 				<p>
