--- a/playground/new_file.html
+++ b/playground/new_file.html
@@ -2,22 +2,33 @@
 <html lang="en">
 	<head>
 		
-		<title>new_file</title>
+		<title>HTML</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<style type= "text/css">
+			
+		</style>
 		
 	</head>
 
 	<body>
 		<div>
 			<header>
-				<h1>This was edited in cloud 9</h1>
+				<div class="container">
+				<h1>This was edited in aptana</h1>
+				<h2>Today is september 8th</h2>
+				</div>
 			</header>
 			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
+				<div class="container">
+					<p>
+						<a href="/">Home</a>
+					</p>
+					<p>
+						<a href="/contact">Contact</a>
+					</p>
+				</div>
 			</nav>
 
 			<div>
@@ -25,10 +36,13 @@
 			</div>
 
 			<footer>
-				<p>
-					&copy; Copyright  by ponterip1
-				</p>
+				<div class="container">
+					<p>
+						&copy; Copyright  by ponterip1
+					</p>
+				</div>
 			</footer>
 		</div>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</body>
 </html>
